changed button size, fixed resulting layout bugs. Changed reviews pagination to scroll of all reviews in one page

--- a/src/blocks/button/button.css
+++ b/src/blocks/button/button.css
@@ -1,9 +1,9 @@
 @import url(./__icon/button__icon.css);
 
 .button {
-  border-radius: var( --radius-small);
+  border-radius: var( --radius-medium);
   border: none;
-  padding: 12px;
+  padding: 16px var(--padding-large);
   cursor: pointer;
   transition: 0.2s;
   text-decoration: none;
@@ -12,6 +12,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  font-size: 20px;
 }
 
 .button-primary {
@@ -29,7 +30,7 @@
 }
 
 .button-language {
-  
+  font-size: inherit;
   gap: 6px;
   border: none;
   padding: 8px;
@@ -78,4 +79,10 @@
 .button-phone {
   display: none;
   padding: var(--padding-button);
+}
+
+.header__submenu .button-primary {
+  padding: 12px;
+  border-radius: var(--radius-small);
+  font-size: inherit;
 }
